--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -53,6 +53,22 @@
   transition: background-color 0.2s;
 }
 
-.button:hover {
+.button:not(:disabled):hover {
   background-color: var(--blue-dark);
+}
+
+.button:disabled {
+  background-color: var(--white);
+  color: var(--text);
+  cursor: not-allowed;
+}
+
+.buttonActive {
+  background-color: var(--white);
+  color: var(--title);
+}
+
+.buttonActive:hover {
+  background-color: var(--red);
+  color: var(--white);
 }
